# ft_ls

./: CMakeLists.txt  Makefile  additional_ft_for_operate.dir.c  apply_sorting.c  check_flags.c  ft_for_long_output.c  ft_for_long_output2.c  ft_for_long_output3.c  ft_ls.h  list_function.c  main.c  operate_dir.c  operate_not_dir.c  parse_params.c  print_folder.c  reverse_list.c  sorting.c  split_dir_and_not_dir.c
libft/: ._includes
libft/includes/: libft.h
